src/App.css
.App {
    background-image: url("assets/images/fon.jpg");
    height: fit-content;
    min-height: 100vh;
}

.icon_div {
    padding-top: 10px;
}

.icon {
    background: url("assets/images/icons.png");
    display: inline-block;
    height: 24px;
    width: 24px;
    cursor: pointer;
    margin: 0 3px;
}

.icon:active {
    background-color: #3e8e41;
    box-shadow: 0 4px #666;
}

.icon:hover {
    background-color: #3e8e41
}

.icon_fb {
    background-position: 120px 0;
}

.icon_tw {
    background-position: 96px 0;
}

.icon_gplus {
    background-position: 72px 0;
}

.icon_ok {
    background-position: 48px 0;
}

.icon_in {
    background-position: 24px 0;
}

.footer_text {
    text-align: left;
    font-size: 12px;
}

.footer_bottom {
    display: grid;
    grid-column: 1 /span 2;
}

.footer {
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    font-size: 14px;
}

.footer > div {
    width: 50%;
    margin: 0 auto;
}

.sidebar_text {
    padding-left: 16px;
}

.form_select {
    width: 280px;
    margin: 8px;
}

@media only screen and (max-width: 960px) {
    .footer > div {
        width: 100%;
    }

    .footer_text {
        text-align: center;
    }
}

@media only screen and (max-width: 600px) {
    .footer {
        padding-left: 16px;
    }

    .footer > div {
        width: 90%;
        margin: 0;
    }

    .footer_text {
        text-align: center;
    }

    .sidebar_text {
        margin: 0 auto;
    }
}

@media only screen and (max-width: 730px) {
    .form_select {
        width: 263px;
    }
}

@media only screen and (max-width: 650px) {
    .form_select {
        width: 243px;
    }
}

@media only screen and (max-width: 370px) {
    .form_select {
        width: 263px;
    }
}

